mobile fix for overflow

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 
 @media (max-width: 500px) {
     .container {
-        width: 90%;
+        width: 100%;
         margin: 20px auto;
     }
 }
